# agent_with_HITL-

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  ReAct_flow.md  config.py  main.py  pyproject.toml  requirements.txt  test_llm_connection.py
examples/: comprehensive_demo.py
examples/sim-real-world/IT-ticket_handling/: README.md  incident_payload.json  incident_response_demo.py
examples/sim-real-world/network-rca/: README.md  demo.py  examples.json  runbooks.json
examples/sim-real-world/network-rca/data/: alerts.json  change_log.json  topology.json  wifi_metrics.json
resources/context/: examples.json  runbooks.json
scripts/: create_plugin.py
src/: __init__.py
src/agents/: agent_factory.py  agent_orchestrator.py
src/context/: context_assembler.py  example_loader.py  prompt_profile.py  runbook_loader.py  workflow_context.py
src/filters/: security_filter.py  telemetry_filter.py
src/observability/: feedback_store.py  telemetry_service.py
src/plugins/: base_plugin.py  document_processing_plugin.py  http_web_plugin.py  plugin_manager.py  plugin_suggestions.py  tooling_metadata.py  wifi_diagnostics_plugin.py
src/policies/: approval_service.py  policy_engine.py  policy_models.py
src/reasoning/plan_react/: __init__.py  models.py  process.py  steps.py  steps.py.backup  steps_enhanced.py  steps_reactive.py  tool_mapper.py
src/runtime/: runtime_builder.py  runtime_types.py  tool_gateway.py
src/services/: semantic_kernel_service.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py
tests/unit/context/: test_context_assembler.py  test_runbook_and_examples.py
tests/unit/observability/: test_feedback_store.py  test_telemetry_service.py
tests/unit/plugins/: test_plugin_template.py  test_tooling_metadata.py
tests/unit/policies/: test_policy_engine.py
tests/unit/reasoning/: test_coordinator_replan.py  test_plan_react.py  test_react_executor.py
tests/unit/runtime/: test_tool_gateway.py
